--- a/roles/prepare_site_expman/handlers/main.yml
+++ b/roles/prepare_site_expman/handlers/main.yml
@@ -1,3 +1,7 @@
 - name: restart_nginx
   sudo: yes
   service: name=nginx state=restarted
+
+- name: start elasticsearch
+  sudo: yes
+  service: name=elasticsearch state=started
