--- a/roles/prepare_site_expman/tasks/main.yml
+++ b/roles/prepare_site_expman/tasks/main.yml
@@ -34,3 +34,17 @@
   sudo: yes
   template: src={{full_app_name}}.nginx.j2 dest=/etc/nginx/sites-enabled/{{full_app_name}}
   notify: restart_nginx
+
+- name: download elasticsearch
+  sudo: true
+  get_url: >
+    dest={{nagios_build_directory}}
+    url=https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.1.0.deb
+
+- name: install elasticsearch
+  sudo: true
+  command: "dpkg -i elasticsearch-1.1.0.deb chdir={{nagios_build_directory}}"
+  notify: start elasticsearch
+
+- name: install elasticsearch gem
+  command: bash -lc "gem install elasticsearch"
