--- a/roles/ufw/handlers/main.yml
+++ b/roles/ufw/handlers/main.yml
@@ -2,3 +2,7 @@
 - name: Restart ufw
   service: name=ufw state=restarted
   sudo: yes
+
+- name: Restart nrpe
+  service: name=nagios-nrpe-server state=restarted
+  sudo: yes
